// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<label
  className="async-select"
>
  <div
    className=" css-b62m3t-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      className="async-select__control css-13cymwt-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="async-select__value-container css-1fdsijx-ValueContainer"
      >
        <div
          className="async-select__placeholder css-1jqq78o-placeholder"
          id="react-select-2-placeholder"
        />
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-describedby="react-select-2-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="react-select-2-input"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="async-select__icon-arrow-bottom"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Default menu open 1`] = `
<label
  className="async-select"
>
  <div
    className=" css-b62m3t-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      className="async-select__control css-13cymwt-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="async-select__value-container css-1fdsijx-ValueContainer"
      >
        <div
          className="async-select__placeholder css-1jqq78o-placeholder"
          id="react-select-3-placeholder"
        />
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="react-select-3-listbox"
          aria-describedby="react-select-3-placeholder"
          aria-expanded={true}
          aria-haspopup={true}
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="react-select-3-input"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="async-select__icon-arrow-bottom async-select__icon-arrow-bottom_open"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      className="async-select__menu css-1nmdiq5-menu"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <div
        aria-multiselectable={false}
        className="async-select__menu-list css-1n6sfyn-MenuList"
        id="react-select-3-listbox"
        role="listbox"
      >
        <div
          className=" css-1wlit7h-NoOptionsMessage"
        >
          No options
        </div>
      </div>
    </div>
  </div>
</label>
`;

exports[`Default value 1`] = `
<label
  className="async-select"
>
  <div
    className=" css-b62m3t-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-6-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      className="async-select__control css-13cymwt-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="async-select__value-container css-1fdsijx-ValueContainer"
      >
        <div
          className="async-select__single-value css-1dimb5e-singleValue"
        >
          Мали
        </div>
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="react-select-6-listbox"
          aria-expanded={true}
          aria-haspopup={true}
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="react-select-6-input"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="async-select__icon-arrow-bottom async-select__icon-arrow-bottom_open"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      className="async-select__menu css-1nmdiq5-menu"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <div
        aria-multiselectable={false}
        className="async-select__menu-list css-1n6sfyn-MenuList"
        id="react-select-6-listbox"
        role="listbox"
      >
        <div
          className=" css-1wlit7h-NoOptionsMessage"
        >
          No options
        </div>
      </div>
    </div>
  </div>
</label>
`;

exports[`Disabled 1`] = `
<label
  className="async-select"
>
  <div
    className=" css-3iigni-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-5-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      aria-disabled={true}
      className="async-select__control async-select__control_disabled css-16xfy0z-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="async-select__value-container css-1fdsijx-ValueContainer"
      >
        <div
          className="async-select__placeholder css-1jqq78o-placeholder"
          id="react-select-5-placeholder"
        />
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-describedby="react-select-5-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={true}
          id="react-select-5-input"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="async-select__icon-arrow-bottom async-select__icon-arrow-bottom_disabled"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Error 1`] = `
<label
  className="async-select"
>
  <div
    className=" css-b62m3t-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      className="async-select__control async-select__control_error css-13cymwt-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="async-select__value-container css-1fdsijx-ValueContainer"
      >
        <div
          className="async-select__placeholder css-1jqq78o-placeholder"
          id="react-select-4-placeholder"
        />
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-describedby="react-select-4-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="react-select-4-input"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="async-select__icon-arrow-bottom"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Label 1`] = `
<label
  className="async-select"
>
  <span
    className="async-select__label"
  >
    Label field
  </span>
  <div
    className=" css-b62m3t-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-7-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      className="async-select__control css-13cymwt-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="async-select__value-container css-1fdsijx-ValueContainer"
      >
        <div
          className="async-select__placeholder css-1jqq78o-placeholder"
          id="react-select-7-placeholder"
        />
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-describedby="react-select-7-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="react-select-7-input"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="async-select__icon-arrow-bottom"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Label 2`] = `
<label
  className="async-select"
>
  <span
    className="async-select__label"
  >
    Label field
  </span>
  <div
    className=" css-b62m3t-container"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-8-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
      role="log"
    />
    <div
      className="async-select__control css-13cymwt-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="async-select__value-container css-1fdsijx-ValueContainer"
      >
        <div
          className="async-select__placeholder css-1jqq78o-placeholder"
          id="react-select-8-placeholder"
        />
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-describedby="react-select-8-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="react-select-8-input"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <svg
          className="async-select__icon-arrow-bottom"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;
